force-app/main/default/objects/Project_Assignment__c/fields/Action_By2__c.field-meta.xml
<CustomField>
    <fullName>Action_By2__c</fullName>
    <label>Action By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>