force-app/main/default/objects/Project_Assignment__c/fields/Action_By__c.field-meta.xml
<CustomField>
    <fullName>Action_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action By (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Assignments</relationshipLabel>
    <relationshipName>Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>