force-app/main/default/objects/Project_Assignment__c/fields/Assignment_Description__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Description__c</fullName>
    <label>Assignment Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>