force-app/main/default/objects/Project_Assignment__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXCOM</fullName>
            </value>
            <value>
                <fullName>KING SALMAN PROJECT</fullName>
            </value>
            <value>
                <fullName>ARAQA HILLS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>