force-app/main/default/objects/Project_Assignment__c/fields/Executive_Report__c.field-meta.xml
<CustomField>
    <fullName>Executive_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Report</label>
    <referenceTo>Executive_Report__c</referenceTo>
    <relationshipLabel>Project Assignments</relationshipLabel>
    <relationshipName>Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>