force-app/main/default/objects/Project_Assignment__c/fields/LinkToProjectAssignment__c.field-meta.xml
<CustomField>
    <fullName>LinkToProjectAssignment__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View Record&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link To Project Assignment</label>
    <type>Text</type>
</CustomField>