force-app/main/default/objects/Project_Assignment__c/fields/Next_Action_Decision_Required__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Decision_Required__c</fullName>
    <label>Next Action / Decision Required</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>