force-app/main/default/objects/Project_Assignment__c/fields/Priority_Notes__c.field-meta.xml
<CustomField>
    <fullName>Priority_Notes__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending / Requires ExCom Approval</fullName>
                <color>#FF0000</color>
                <label>Pending / Requires ExCom Approval</label>
            </value>
            <value>
                <fullName>Related Task</fullName>
                <color>#33CC00</color>
                <label>Related Task</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#FF9900</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <color>#BBBBBB</color>
                <label>Done</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>