force-app/main/default/objects/Project_Assignment__c/fields/Target_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Status__c</fullName>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>